<!--<resources>
    <string name="app_name">Parking Velo</string>
</resources>-->
<resources>
    <string name="app_name">Parking Vélo</string>
    <string name="action_sign_in_short">Créer un compte</string>
    <string name="email">Email</string>
    <string name="minimum_password">Mot de passe trop court, 6 caractères requis!</string>
    <string name="auth_failed">L\'authentification a échouée, vérifiez votre email, mot de passe ou bien créeez un compte</string>
    <string name="change_email">Modifier l\'adresse mail</string>
    <string name="change_password">Modifier le mot de passe</string>
    <string name="send_password_reset_email">Envoyer un mail de réinitialisation de mot de passe</string>
    <string name="remove_user">Supprimer le compte</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="new_pass">Nouveau mot de passe</string>
    <string name="title_activity_profile">Profil</string>
    <string name="title_activity_login">Créer un compte</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mot de passe</string>
    <string name="hint_password_confirm">Mot de passe</string>
    <string name="hint_name">Nom</string>
    <string name="btn_login">Se connecter</string>
    <string name="btn_link_to_register">Pas encore membre ?</string>
    <string name="btn_link_to_login">J\'ai déjà un compte. Me connecter.</string>
    <string name="title_activity_reset_password">Réinitialisation du mot de passe</string>
    <string name="btn_forgot_password">Mot de passe oublié ?</string>
    <string name="btn_reset_password">Réinitialiser le mot de passe</string>
    <string name="btn_back"><![CDATA[<< Retour]]></string>
    <string name="hint_new_email">Nouveau mail</string>
    <string name="btn_change">Modifier</string>
    <string name="btn_send">Envoyer</string>
    <string name="btn_remove">Supprimer</string>
    <string name="btn_sign_out">Se déconnecter</string>
    <string name="lbl_forgot_password">Mot de passe oublié ?</string>
    <string name="forgot_password_msg">Nous avons besoin de votre adresse mail pour vous envoyer les instructions.</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="btn_account">Profil</string>
    <string name="facebook_app_id">466545037117157</string>
    <string name="fb_login_protocol_scheme">fb466545037117157</string>
    <string name="btn_login_anonymous">Rester anonyme</string>
    <string name="btn_persist_anonymous_account">Passer à un vrai compte ?</string>
    <string name="btn_persist_anonymous">Valider</string>
    <string name="new_pass_confirm">Confirmez le mot de passe</string>
    <string name="delete_account_popup_title">Suppression</string>
    <string name="delete_account_popup_content">Voulez-vous vraiment supprimer ce compte ?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="enter_password">Veuillez saisir un mot de passe</string>
    <string name="different_passwords">Mots de passe différents</string>
    <string name="email_updated">Adresse mail mise à jour, veuillez vous reconnecter</string>
    <string name="failed_update_email">Impossible de mettre à jour l\'email</string>
    <string name="enter_email">Veuillez saisir une adresse mail</string>
    <string name="password_updated">Mot de passe modifié, veuillez vous reconnecter.</string>
    <string name="failed_update_password">Impossible de modifier le mot de passe</string>
    <string name="reset_password_mail_sent">Mail de réinitialisation de mot de passe envoyé</string>
    <string name="reset_password_mail_sent_failed">L\'envoi du mail de réinitialisation a échoué</string>
    <string name="account_deleted">Profil supprimé :( Créez en un nouveau maintenant !</string>
    <string name="account_deleted_failed">La suppression du compte a échouée</string>
    <string name="auth_failed_google_anonymous">L\'authentification a échouée</string>
    <string name="registered_mail_id">Entrez votre adresse mail</string>
    <string name="mail_instructions_sent">Des instructions ont été envoyées à votre adresse mail</string>
    <string name="reset_email_send_failed">L\'envoi du mail de réinitialisation du mot de passe a échoué</string>
    <string name="authentication_failed">L\'authentification a échouée</string>
    <string name="btn_link_with_credentials">Valider</string>
    <string name="persist_anonymous_success">Votre nouveau compte a bien été créé</string>
    <string name="persist_anonymous_fail">Impossible de lier le compte anonyme à ce nouveau compte</string>

    <string name="title_activity_maps">Détails de la localisation actuelle</string>
    <string name="default_info_title">Localisation par défaut</string>
    <string name="default_info_snippet">Aucun endroit trouvé car les permissions n\'ont pas été acceptées.</string>
    <string name="option_get_place">Récupérez la localisation</string>
    <string name="pick_place">Choisissez une localisation</string>

    <string name="parc_capacity">Capacité</string>
    <string name="btn_route">Itinéraire</string>
    <string name="routes_fail">Impossible d\'afficher cet itinéraire</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="btn_show_route">Itinéraire</string>
    <string name="publishing_switch">Publier</string>
    <string name="title_activity_parcs">Mes Parcs</string>

    <string name="btn_parcs">Parcs</string>
    <string name="delete">Supprimer</string>
    <string name="delete_parc">supprimé de vos parcs !</string>
    <string name="undo">Annuler</string>
    <string name="title_activity_parc">Edition</string>
    <string name="hint_capacity">Capacité</string>
    <string name="btn_submit">Valider</string>
    <string name="hint_creation_date">Date de création</string>

    <string name="btn_filters">Filtres</string>
    <string name="switch_shared">Afficher les parcs des autres utilisateurs ?</string>
    <string name="seekbar_capacity">Capacité</string>
    <string name="seekbar_note">Note</string>
</resources>